[tool.poetry]
name = "leap-workflows-python-sdk"
version = "2.0.2"
description = "Client for Leap Workflows API"
authors = ["Leap Support <help@tryleap.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "leap_workflows"}]

[tool.poetry.dependencies]
python = "^3.8"
certifi = ">=2023.7.22"
python-dateutil = "^2.8.2"
typing_extensions = "^4.3.0"
urllib3 = "^1.26.18"
cryptography = "^41.0.6"
frozendict = "^2.3.4"
aiohttp = "^3.9.2"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
setuptools = "^65.5.1"
pytest = "^7.3.1"
pytest-cov = "2.8.1"
pytest-randomly = "1.2.3"
build = "^0.10.0"
twine = "^4.0.2"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
